fix contrast for accessibility

--- a/lesson 2/css/small.css
+++ b/lesson 2/css/small.css
@@ -139,7 +139,7 @@ main.div {
 
 a {
     display: block;
-    color: #008080;
+    color: #3A2449;
     padding-left: 1.30em;
 }
 
